deploy/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: raskub-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: rpi.k8s.hello-world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 8080
